--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -1,29 +1,29 @@
 # careers section data
 # if you don't have language feature(language.yml is empty), ignore "i18n" items
 - name:
-    detail: Company A
+    detail: Sentice Tech LLC
     i18n: company_a
   desc:
-    detail: I worked at Company A ...
+    detail: I worked at Sentice Tech ...
     i18n: company_a_desc
   date:
-    detail: Apr. 2016
+    detail: August. 2015
     i18n: company_a_date
   job:
-    detail: CTO
+    detail: Senior Software Developer
     i18n: company_a_job
   icon: fa-plus-square
 
 - name:
-    detail: Company B
+    detail: Netcetera AG
     i18n: company_b
   desc:
-    detail: I worked at Company B ...
+    detail: I worked at Netcetera AG ...
     i18n: company_b_desc
   date:
-    detail: Jun. 2015
+    detail: Jun. 2012
     i18n: company_b_date
   job:
-    detail: Full Stack Developer
+    detail: Java Developer
     i18n: company_b_job
   icon: fa-plus-square
