--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 
 # Website settings
 title: Igor Simevski
-description: Igor's blog,use Jekyll and github pages.
-keywords: Igor,Jalpc,blog,Jekyll,github,gh-pages
+description: Igor's blog.
+keywords: Igor,Simevski
 baseurl:  / # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
-url: https://jarrekk.github.io/Jalpc  # url should be 'http://<github_username>.github.io/homepage' as before
+url: https://igorsimevski.github.io/  # url should be 'http://<github_username>.github.io/homepage' as before
 # url: http://127.0.0.1:4000
 img_path: /Jalpc/static/assets/img/blog  # url should be '/homepage/static/assets/img/blog' as before
 
