--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Jalpc",
+  "name": "IgorSimevski",
   "version": "1.1.1",
-  "description": "npm config file for Jalpc",
+  "description": "npm config file for IgorSimevski",
   "main": "",
   "scripts": {
     "build": "node build/build.js",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jarrekk/Jalpc.git"
+    "url": "git+https://github.com/igorsimevski/igorsimevski.github.io"
   },
   "author": "Kun Jia",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jarrekk/Jalpc/issues"
+    "url": "https://github.com/igorsimevski/igorsimevski.github.io/issues"
   },
-  "homepage": "https://github.com/jarrekk/Jalpc#readme",
+  "homepage": "https://github.com/igorsimevski/igorsimevski.github.io#readme",
   "dependencies": {
     "animate.css": "^3.5.2",
     "bootstrap": "^3.3.6",
