--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/igorsimevski/igorsimevski.github.io"
   },
-  "author": "Kun Jia",
+  "author": "Igor Simevski",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/igorsimevski/igorsimevski.github.io/issues"
