--- a/_data/index/banners.yml
+++ b/_data/index/banners.yml
@@ -3,7 +3,10 @@
 #
 # Images are expected to be located in `static/assets/img/`.
 - src: landing/header_one.jpg
-  title: first banner image
+  title: Bringing IT to life
 
 - src: landing/header_two.jpg
-  title: second banner image
+  title: Bringing IT to life
+
+- src: landing/header_three.jpg
+  title: Bringing IT to life
