--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -1,22 +1,38 @@
 # projects section data
 # If you don't have language feature(language.yml is empty), ignore "i18n" items
 # Suggest projects' img be located at '/static/assets/img/landing', and edit following img items.
-- name: Jalpc
-  i18n: jalpc
-  gh_user: jarrekk
-  repo: Jalpc
+- name: (Phone.com) CTI integration in Salesforce, Zoho
+  i18n: pdc
   img: /static/assets/img/landing/jekyll.png
-  desc: This project is my project. I use javescript to get repo's information all my repos have only one request.
+  url: https://google.com
+  desc: Integration of VOIP services and metadata in various CRM systems. (Click2Call, Real-Time Call Info Display, Call Logging)
 
-- name: Python
-  i18n: cpython
-  gh_user: python
-  repo: cpython
+- name: Location Dependent Automatic Parking Gate Control
+  i18n: apc
   img: /static/assets/img/landing/python.png
-  desc: This project is other's project. I use another request to get repo's information.
+  url: https://google.com
+  desc: System for initiating gate opening depending on proximity to location.
 
-- name: Google
-  i18n: google
+- name: C Compiler for Dependable Processor
+  i18n: cc
   url: https://google.com
   img: /static/assets/img/landing/google.png
-  desc: This is another project.
+  desc: C Compiler developed with Java programming language and JavaCC Parser Generator. Developed own parser with help of JavaCC. The compiler’s output is assembly code for a dependable processor with an original instruction set developed by IHP Institute for High Performance Microelectronics in Frankfurt (Oder).
+
+- name: Off-grid electrical system with Remote Control of Electric Devices
+  i18n: sunb
+  url: https://google.com
+  img: /static/assets/img/landing/google.png
+  desc: Android application for Remote control of electric devices over Bluetooth Low Energy protocol. The off-grid system is powered by a battery charged by Sun collectors.
+
+- name: Real-time Audio processing / HLS streaming server
+  i18n: hls
+  url: https://google.com
+  img: /static/assets/img/landing/google.png
+  desc: Real-time Audio processing / HLS streaming server fully developed with Bash and streamed by Nginx.
+
+- name: Real-time Event Report System​ 
+  i18n: rte
+  url: https://google.com
+  img: /static/assets/img/landing/google.png
+  desc: A system that unifies event reporting to Police, Fire Departments and First Aid Medical departments. The system consists of Android application for Reporting real-time events (accidents, thefts, fires, medical emergencies, etc...) and Server for receiving and managing the events.
