--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -10,7 +10,7 @@
     detail: August 2015
     i18n: company_a_date
   job:
-    detail: Senior Software Developer & Technical Lead
+    detail: Senior Software Developer, Technical Lead & Sys Admin
     i18n: company_a_job
   icon: fa-plus-square
 
