--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -18,7 +18,7 @@
     detail: Netcetera AG
     i18n: company_b
   desc:
-    detail: "I worked at Netcetera AG in Skopje, where I was involved in several Java EE projects using various Java techonlogies, some of which: Spring, Hibernate, JDBC, Servlets, JSP, Struts, etc. Gained valuable knowledge."
+    detail: "I started my professional programming career at Netcetera AG in Skopje, where I was involved in several Java EE projects using various Java techonlogies, some of which: Spring, Hibernate, JDBC, Servlets, JSP, Struts, etc. Gained valuable knowledge."
     i18n: company_b_desc
   date:
     detail: June 2012
