--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -32,7 +32,7 @@
     detail: Faculty of Electrical Engineering and IT
     i18n: company_c
   desc:
-    detail: Developed a C compiler for Dependable processor as a part of M.Sc. Thesis.
+    detail: Continued my studies involving several subjects from the fields of SoC and Nanoelectronics. Developed a C compiler for Dependable processor as a part of M.Sc. Thesis.
     i18n: company_c_desc
   date:
     detail: November 2011
