--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -60,7 +60,7 @@
     detail: Faculty of Electrical Engineering and IT
     i18n: company_e
   desc:
-    detail: Received solid science and engineering knowledge base.
+    detail: Received solid science and engineering knowledge base. Participated in few competitions for the Faculty, one of which "Hardware & Software" international competition in 2011 when our team won the first prize.
     i18n: company_e_desc
   date:
     detail: October 2007
