--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -29,7 +29,7 @@
   icon: fa-plus-square
 
 - name:
-    detail: Faculty of Electrical Engineering and IT
+    detail: Faculty of Electrical Engineering and IT, UKIM, Skopje
     i18n: company_c
   desc:
     detail: Continued my studies involving several subjects from the fields of SoC and Nanoelectronics. Developed a C compiler for Dependable processor as a part of M.Sc. Thesis.
@@ -43,7 +43,7 @@
   icon: fa-plus-square
 
 - name:
-    detail: Faculty of Electrical Engineering and IT
+    detail: Faculty of Electrical Engineering and IT, UKIM, Skopje
     i18n: company_d
   desc:
     detail: "Assisted students in finishing laboratory tasks. Worked with PIC16F877a microcontroller. Subject: Mictoelectronics."
@@ -57,7 +57,7 @@
   icon: fa-plus-square
 
 - name:
-    detail: Faculty of Electrical Engineering and IT
+    detail: Faculty of Electrical Engineering and IT, UKIM, Skopje
     i18n: company_e
   desc:
     detail: Received solid science and engineering knowledge base. Participated in few competitions for the Faculty, one of which "Hardware & Software" international competition in 2011 when our team won the first prize.
