--- a/_data/index/links.yml
+++ b/_data/index/links.yml
@@ -5,8 +5,14 @@
   website: http://www.dee.uns.ac.rs/PastSymp/Ee2017/hs-ns/Results%20H&S%202011.pdf
   email: dee@uns.ac.rs
 
-- last_name: LN
-  first_name: FN
-  desc: COO
-  website: https://github.com
-  email: coo@google.com
+- last_name: Netcetera AG
+  first_name:
+  desc: Software Company
+  website: https://www.netcetera.com/
+  email: info@netcetera.com
+
+- last_name: Sentice Tech LLC
+  first_name:
+  desc: Software Company
+  website: https://sentice.com/
+  email: info@sentice.com
