--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,5 +2,5 @@
 
 label: Ability
 id : cs
-aspects:    GitHub, Java, Android, NodeJS, HTML5, Javascript, Machine Learing, Python, Docker, AWS Lambda, Golang, MySQL, Bash
-percentage: 90,    80,   80,      90,     65,    80,         30,              30,     50,     60,         50,     60,    60
+aspects:    GitHub, Java, Android, NodeJS, HTML5, Javascript, Machine Learing, Python, Docker, AWS Lambda, Golang, MySQL, Bash, Linux
+percentage: 90,    80,   80,      90,     65,    80,         30,              30,     50,     60,         50,     60,     60,   70
