--- a/_data/index/links.yml
+++ b/_data/index/links.yml
@@ -5,6 +5,12 @@
   website: http://www.dee.uns.ac.rs/PastSymp/Ee2017/hs-ns/Results%20H&S%202011.pdf
   email: dee@uns.ac.rs
 
+- last_name: FEEIT Skopje
+  first_name:
+  desc: Faculty of Electrical Engineering and IT
+  website: http://www.feit.ukim.edu.mk/
+  email: informacii@feit.ukim.edu.mk
+
 - last_name: Netcetera AG
   first_name:
   desc: Software Company
