--- a/_data/index/links.yml
+++ b/_data/index/links.yml
@@ -22,3 +22,9 @@
   desc: Software Company
   website: https://sentice.com/
   email: info@sentice.com
+
+- last_name: H&S 2010 Presentation
+  first_name:
+  desc: Hardware and Software Competition 
+  website: https://slideplayer.com/slide/695843/
+  email: dee@uns.ac.rs
