--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author:  # change following line to your infomation.
   last_name: Simevski  # Be used at index page about me section.
   avatar: /static/assets/img/landing/igor.gif  # upload your avatar at directory and edit it.
   github_username: igorsimevski  # Leave blank if you don't have now
-  linkedin_id: # Leave blank if you don't have now
+  linkedin_id: https://www.linkedin.com/in/simevski/ # Leave blank if you don't have now
   facebook_username: # Leave blank if you don't have now
   twitter_username: # Leave blank if you don't have now
   email: i.simevski@gmail.com  # Leave blank if you don't have now
