--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -16,56 +16,56 @@
 
 - name:
     detail: Netcetera AG
-    i18n: company_b
+    i18n: netcetera
   desc:
     detail: "I started my professional programming career at Netcetera AG in Skopje, where I was involved in several Java EE projects using various Java techonlogies, some of which: Spring, Hibernate, JDBC, Servlets, JSP, Struts, etc. Gained valuable knowledge."
-    i18n: company_b_desc
+    i18n: netcetera_desc
   date:
     detail: June 2012
-    i18n: company_b_date
+    i18n: netcetera_date
   job:
     detail: Java Developer
-    i18n: company_b_job
+    i18n: netcetera_job
   icon: fa-plus-square
 
 - name:
     detail: Faculty of Electrical Engineering and IT, UKIM, Skopje
-    i18n: company_c
+    i18n: feit_msc
   desc:
     detail: Continued my studies involving several subjects from the fields of SoC and Nanoelectronics. Developed a C compiler for Dependable processor as a part of M.Sc. Thesis.
-    i18n: company_c_desc
+    i18n: feit_msc_desc
   date:
     detail: November 2011
-    i18n: company_c_date
+    i18n: feit_msc_date
   job:
     detail: M.Sc. Studies
-    i18n: company_c_job
+    i18n: feit_msc_job
   icon: fa-plus-square
 
 - name:
     detail: Faculty of Electrical Engineering and IT, UKIM, Skopje
-    i18n: company_d
+    i18n: feit_ta
   desc:
     detail: "Assisted students in finishing laboratory tasks. Worked with PIC16F877a microcontroller. Subject: Mictoelectronics."
-    i18n: company_d_desc
+    i18n: feit_ta_desc
   date:
     detail: February 2011
-    i18n: company_d_date
+    i18n: feit_ta_date
   job:
     detail: Teaching Assistant
-    i18n: company_d_job
+    i18n: feit_ta_job
   icon: fa-plus-square
 
 - name:
     detail: Faculty of Electrical Engineering and IT, UKIM, Skopje
-    i18n: company_e
+    i18n: feit_bsc
   desc:
     detail: Received solid science and engineering knowledge base. Participated in few competitions for the Faculty, one of which "Hardware & Software" international competition in 2011 when our team won the first prize.
-    i18n: company_e_desc
+    i18n: feit_bsc_desc
   date:
     detail: October 2007
-    i18n: company_e_date
+    i18n: feit_bsc_date
   job:
     detail: B.Sc. Studies
-    i18n: company_e_job
+    i18n: feit_bsc_job
   icon: fa-plus-square
