--- a/_data/index/links.yml
+++ b/_data/index/links.yml
@@ -5,7 +5,13 @@
   website: https://slideplayer.com/slide/695843/
   email: dee@uns.ac.rs
 
-- last_name: H&S 2011 Results
+- last_name: H&S 2011
+  first_name:
+  desc: Gold Medal Announcement
+  website: http://en.feit.ukim.edu.mk/news/a-team-from-feeit-won-the-gold-medal-at-the-7th-international-contest-hardware-software-h-s-2011-in-novi-sad-serbia
+  email: dee@uns.ac.rs
+
+- last_name: H&S 2011 Official Results
   first_name:
   desc: Hardware and Software Competition 
   website: http://www.dee.uns.ac.rs/PastSymp/Ee2017/hs-ns/Results%20H&S%202011.pdf
