--- a/_data/index/links.yml
+++ b/_data/index/links.yml
@@ -6,7 +6,7 @@
   email: dee@uns.ac.rs
 
 - last_name: H&S 2011
-  first_name: FEEIT SKopje
+  first_name: FEEIT Skopje
   desc: Gold Medal Announcement
   website: http://en.feit.ukim.edu.mk/news/a-team-from-feeit-won-the-gold-medal-at-the-7th-international-contest-hardware-software-h-s-2011-in-novi-sad-serbia
   email: informacii@feit.ukim.edu.mk
