--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -24,7 +24,7 @@
     detail: June 2012
     i18n: netcetera_date
   job:
-    detail: Java Developer
+    detail: Java Software Engineer
     i18n: netcetera_job
   icon: fa-plus-square
 
