--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -53,7 +53,7 @@
   i18n: tie
   url: https://google.com
   img: /static/assets/img/landing/java.png
-  desc: Web Application for organizing hospital data for patients from different hospitals in Switzerland.
+  desc: Web Application for organizing hospital data for patients from different hospitals.
 
 - name: Time Tracker
   i18n: tt
