--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -19,7 +19,7 @@
   img: /static/assets/img/landing/c.png
   desc: C Compiler developed with Java programming language and JavaCC Parser Generator. Developed own parser with help of JavaCC. The compiler’s output is assembly code for a dependable processor with an original instruction set developed by IHP Institute for High Performance Microelectronics in Frankfurt (Oder).
 
-- name: ESA Disaster Charter
+- name: Disaster Charter
   i18n: esa
   url: https://disasterscharter.org/
   img: /static/assets/img/landing/java.png
