--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -28,3 +28,16 @@
     i18n: netcetera_job
   icon: fa-plus-square
 
+- name:
+    detail: Faculty of Electrical Engineering and IT, UKIM, Skopje
+    i18n: feit
+  desc:
+    detail: "Assisted students in finishing laboratory tasks. Worked with PIC16F877a microcontroller. Subject: Mictoelectronics."
+    i18n: feit_ta_desc
+  date:
+    detail: February 2011
+    i18n: feit_ta_date
+  job:
+    detail: Teaching Assistant
+    i18n: feit_ta_job
+  icon: fa-plus-square
