--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,5 +2,5 @@
 
 label: Ability
 id : cs
-aspects:    GitHub, Java, Spring, Android, NodeJS, HTML5, Javascript, Machine Learing, Python, Docker, AWS Lambda, Golang, MySQL, Bash, Linux, Playing the Piano
-percentage: 90,     80,   70,     80,      90,     65,    80,         30,              30,     50,     60,         50,     60,    60,   70,    40
+aspects:    GitHub, Java, Spring, Android, NodeJS, HTML5, Javascript, Machine Learing, Python, Docker, AWS Lambda, Golang, MySQL, C,  Bash, Linux, Playing the Piano
+percentage: 90,     80,   70,     80,      90,     65,    80,         30,              30,     50,     60,         50,     60,    40, 60,   70,    40
