--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gritter": "^1.7.4",
     "jquery": "^3.4.1",
     "jquery-slimscroll": "^1.3.8",
+    "lozad": "^1.9.0",
     "metismenu": "^3.0.4",
     "pace-progress": "^1.0.2",
     "peity": "^3.3.0",
