--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "animate.css": "^3.7.2",
     "bootstrap": "^3.4.1",
     "chart.js": "^2.8.0",
+    "chartjs-plugin-deferred": "^1.0.1",
     "colors": "^1.3.3",
     "components-font-awesome": "^5.9.0",
     "gritter": "^1.7.4",
