--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/igorsimevski/igorsimevski.github.io#readme",
   "dependencies": {
     "animate.css": "^3.7.2",
-    "bootstrap": "^3.4.1",
+    "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "colors": "^1.3.3",
     "components-font-awesome": "^5.9.0",
@@ -30,6 +30,7 @@
     "metismenu": "^3.0.4",
     "pace-progress": "^1.0.2",
     "peity": "^3.3.0",
+    "popper.js": "^1.15.0",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
