--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -83,5 +83,5 @@
 
 - name: Autonomous Research of Unknown Terrain
   i18n: hwsw2011
-  url: http://en.feit.ukim.edu.mk/news/a-team-from-feeit-won-the-gold-medal-at-the-7th-international-contest-hardware-software-h-s-2011-in-novi-sad-serbia
+  url: http://en-archived.feit.ukim.edu.mk/news/a-team-from-feeit-won-the-gold-medal-at-the-7th-international-contest-hardware-software-h-s-2011-in-novi-sad-serbia
   img: /static/assets/img/landing/c.png
